--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "clsx": "^2.1.1",
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "12.23.12",
     "glob": "^11.0.3",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
@@ -75,7 +75,7 @@
     "next-pwa": "5.6.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
-    "openai": "^5.23.2",
+    "openai": "^4.58.1",
     "parquetjs-lite": "^0.8.7",
     "pdfkit": "^0.17.2",
     "react": "18.3.1",
@@ -159,6 +159,9 @@
     "tsx": "^4.20.5",
     "typescript": "5.6.2",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "motion-dom": "12.23.12"
   },
   "engines": {
     "node": ">=20 <21",
