your message here

--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,105 @@
-# See docs/setup/environment.md for field-by-field guidance.
+##############################
+# GramorX — .env.example
+# SAFE TEMPLATE (no secrets)
+# Copy to `.env.local` and fill in real values
+##############################
 
-# ===== Core =====
-NODE_ENV=development
-SITE_URL=http://localhost:3000
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-# Optional: client base URL if your app reads it
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# ===== Supabase (required if using Supabase) =====
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_URL=
-SUPABASE_SERVICE_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+# ========= PUBLIC (Client-Exposed) =========
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+NEXT_PUBLIC_DEBUG="0"
+NEXT_PUBLIC_DEV_SEED="false"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_XXXX"
+NEXT_PUBLIC_SUPABASE_URL="https://project.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="anon-key-here"
 
-# ===== OpenAI / LLMs (pick what you use) =====
-GX_AI_PROVIDER=openai
-OPENAI_API_KEY=
-OPENAI_MODEL=gpt-4o
-OPENAI_WRITING_MODEL=
-OPENAI_SPEAKING_MODEL=
-GOOGLE_GENERATIVE_AI_API_KEY=
-GEMINI_API_KEY=
-GROQ_API_KEY=
-GROQ_MODEL=
 
-# ===== Payments (optional) =====
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+# ========= APP / SERVER URLS =========
+SITE_URL="http://localhost:3000"
+CRON_BASE_URL="http://localhost:3000/api/cron"
 
-# ===== Twilio (optional for phone/WhatsApp) =====
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_VERIFY_SERVICE_SID=
-TWILIO_WHATSAPP_FROM=
-# Dev helper: bypass Twilio checks locally
-TWILIO_BYPASS=true
-NEXT_PUBLIC_TWILIO_BYPASS=true
 
-# ===== Misc / Limits (optional) =====
-LIMIT_FREE_READING=20
-LIMIT_FREE_LISTENING=10
-LIMIT_FREE_SPEAKING=2
+# ========= SUPABASE (Server) =========
+SUPABASE_URL="https://project.supabase.co"
+SUPABASE_SERVICE_KEY="service-role-key-here"
+SUPABASE_SERVICE_ROLE_KEY="service-role-key-here"
 
-# ===== Validation control (optional) =====
-# Set to "true" in Preview/Dev to avoid failing builds when some secrets are absent
-SKIP_ENV_VALIDATION=false
+
+# ========= DATABASE =========
+DATABASE_URL="postgres://user:password@localhost:5432/db"
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_USER="postgres"
+DB_PASSWORD="password"
+DB_NAME="gramorx_local"
+
+
+# ========= STRIPE =========
+STRIPE_SECRET_KEY="sk_XXXX"
+STRIPE_WEBHOOK_SECRET="whsec_XXXX"
+
+
+# ========= TWILIO / WHATSAPP =========
+TWILIO_ACCOUNT_SID="ACXXXX"
+TWILIO_AUTH_TOKEN="XXXX"
+TWILIO_FROM="+10000000000"
+TWILIO_VERIFY_SID="VA_XXXX"
+TWILIO_VERIFY_SERVICE_SID="VA_XXXX"
+TWILIO_WHATSAPP_FROM="+10000000000"
+WHATSAPP_TASKS_SIGNING_SECRET="xxxx"
+
+
+# ========= ADMIN / ACCESS / FEATURE FLAGS =========
+ADMIN_EMAILS="admin@example.com"
+LOCAL_ADMIN_TOKEN="dev-admin-token"
+SKIP_ENV_VALIDATION="0"
+GX_AI_PROVIDER="openai"   # or: groq | grok | deepseek | gemini
+
+
+# ========= SCHEDULERS / CRON =========
+CRON_SECRET="xxxx"
+
+
+# ========= PREMIUM PIN / RATE LIMITS =========
+PREMIUM_PIN="xxxx"
+PREMIUM_PIN_SALT="xxxx"
+PREMIUM_PIN_HASH="xxxx"
+PREMIUM_PIN_RATE="5"
+PREMIUM_PIN_WINDOW_SEC="60"
+
+
+# ========= SPEAKING / AUDIO STORAGE =========
+SPEAKING_BUCKET="gramorx-speech"
+SPEAKING_DAILY_LIMIT="5"
+SPEAKING_MAX_BYTES="1500000"
+
+
+# ========= OPENAI =========
+OPENAI_API_BASE="https://api.openai.com/v1"
+OPENAI_API_KEY="sk-XXXX"
+OPENAI_MODEL="gpt-4o-mini"
+
+
+# ========= GOOGLE GEMINI =========
+GEMINI_API_BASE="https://generativelanguage.googleapis.com"
+GEMINI_API_KEY="xxxx"
+GEMINI_MODEL="gemini-1.5-flash"
+
+
+# ========= GROQ =========
+GROQ_API_BASE="https://api.groq.com/openai/v1"
+GROQ_API_KEY="xxxx"
+GROQ_MODEL="llama-3-70b"
+
+
+# ========= GROK (xAI) =========
+GROK_API_BASE="https://api.x.ai/v1"
+GROK_API_KEY="xxxx"
+GROK_MODEL="grok-4-latest"
+
+
+# ========= DEEPSEEK =========
+DEEPSEEK_API_BASE="https://api.deepseek.com"
+DEEPSEEK_API_KEY="xxxx"
+DEEPSEEK_MODEL="deepseek-chat"
