--- a/package.json
+++ b/package.json
@@ -6,60 +6,47 @@
     "dev": "concurrently \"next dev\" \"npm:dev:premium\"",
     "dev:premium": "tailwindcss -i ./styles/premium.css -c tailwind.config.premium.js -o ./public/premium.css --watch",
     "dev:3001": "next dev -p 3001 -H 0.0.0.0",
-
     "build": "npm run routes:gen && npm run build:premium && node ./scripts/next-build.mjs",
     "build:premium": "tailwindcss -i ./styles/premium.css -c tailwind.config.premium.js -o ./public/premium.css --minify",
     "start": "next start",
-
     "routes:gen": "node scripts/generate-routes-seed.mjs",
     "routes:watch": "chokidar 'pages/**/*.{js,jsx,ts,tsx}' -c 'npm run routes:gen'",
-
     "review:generate": "node scripts/generate-review-dashboard.mjs",
     "review:watch": "chokidar \"{pages,components,lib,data,supabase,hooks}/**/*\" -c \"npm run review:generate\"",
     "postbuild": "npm run review:generate",
-
     "clean": "rm -rf .next",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:styles": "stylelint \"**/*.css\" --allow-empty-input",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-
     "pin:hash": "ts-node tools/hash-pin.ts",
     "diagnose": "powershell -ExecutionPolicy Bypass -File .\\\\tools\\\\report-build-issues.ps1",
-
     "test": "TWILIO_BYPASS=1 tsx tools/run-tests.ts",
     "test:i18n": "tsx scripts/i18n-check.ts",
-
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-
     "seed:notifications": "tsx scripts/seed-notifications.ts",
     "db:seed:all": "npm run db:setup && npm run seed:notifications",
     "seed:challenge": "tsx scripts/seed_challenge.ts",
     "seed:reading": "tsx scripts/seed_reading_test.ts",
     "snapshot:xp": "tsx scripts/snapshot_xp_leaderboard.ts",
     "gen:cert-template": "tsx scripts/generate_certificate_template.ts",
-
     "l10n:extract": "tsx scripts/l10n_extract.ts",
     "test:a11y": "vitest run tests/a11y/wcag-axe.test.ts",
     "test:phase3": "vitest run tests/**/*.test.ts*",
-
     "ci:lighthouse": "CHROME_PATH=\"$(node -p \"require('playwright-core').chromium.executablePath()\")\" lhci autorun --config=./lighthouserc.json",
     "ci:a11y": "playwright test -c ./playwright.config.ts",
     "ci:all": "start-server-and-test start http://localhost:3000 \"npm run ci:lighthouse && npm run ci:a11y\"",
-
     "ds:guard": "bash scripts/ds_guard.sh",
     "ui:scan": "node scripts/fix-ui-inconsistencies.js scan",
     "ui:fix": "node scripts/fix-ui-inconsistencies.js fix",
     "inventory": "tsx scripts/inventory.ts",
     "screens": "BASE_URL=https://gramorx.com node scripts/capture-screens.mjs",
     "screens:readme": "node scripts/build-screens-readme.mjs",
-
     "lh:ci": "lhci autorun --config=lighthouserc.json",
     "axe": "node scripts/axe-scan.mjs",
     "lh:summary": "node scripts/lh-extract.mjs",
-
     "prepare": "husky",
     "replace-createClient": "node replace-createClient.js",
     "lhci": "lhci autorun --config=.lighthouserc.json"
@@ -95,6 +82,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.1.0",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
     "rehype-highlight": "6.0.0",
