--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
     "framer-motion": "12.23.12",
