--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "glob": "^11.0.3",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.542.0",
     "luxon": "^3.7.2",
     "micro": "^10.0.1",
