--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.916.0",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.2.0",
@@ -69,6 +70,7 @@
     "glob": "^11.0.3",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.542.0",
     "luxon": "^3.7.2",
     "micro": "^10.0.1",
